// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTableHeaderRow should be rendered correctly with extra props 1`] = `
<div
  className="container uui-table-row-container root root uui-table-header-row container align-items-center"
  role="row"
  style={
    Object {
      "minWidth": "566px",
    }
  }
>
  <div
    className="section uui-table-fixed-section fixedColumnsSectionLeft uui-table-fixed-section-left"
    style={
      Object {
        "flex": "0 0 96px",
        "minWidth": "96px",
      }
    }
  >
    <div
      aria-sort="none"
      className="-clickable cell size-24 padding-left-24 resizable"
      onClick={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
      onPointerMove={[Function]}
      onPointerUp={[Function]}
      onTouchStart={[Function]}
      role="columnheader"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "96px",
          "flexGrow": 0,
          "flexShrink": undefined,
          "minWidth": "96px",
          "textAlign": undefined,
        }
      }
    >
      <label
        className="container uui-checkbox-container root size-12 theme-light mode-form color-sky checkbox -clickable"
        tabIndex={-1}
      >
        <div
          className="uui-checkbox"
        >
          <input
            checked={false}
            onChange={[Function]}
            tabIndex={0}
            type="checkbox"
          />
        </div>
      </label>
      <div
        className="tooltipWrapper"
      >
        <div
          className="iconCell uui-table-header-caption"
        >
          <div
            className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 caption upperCase container"
          >
            ID
          </div>
          <button
            className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon icon sortIcon"
            href={null}
            onClick={[Function]}
            role="button"
            tabIndex={-1}
            type="button"
          >
            <div
              className="container uui-icon uui-enabled"
              style={Object {}}
            >
              <svg
                className=""
              />
            </div>
          </button>
        </div>
      </div>
      <div
        className="resizeMark -draggable"
        onMouseDown={[Function]}
      />
    </div>
    <div
      className="uui-scroll-shadow-right"
    />
  </div>
  <div
    className="section scrollingSection uui-table-scrolling-section"
    style={
      Object {
        "flex": "2 0 470px",
        "minWidth": "470px",
      }
    }
  >
    <div
      aria-sort="ascending"
      className="-clickable cell size-24 resizable draggable"
      onClick={[Function]}
      onPointerDown={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
      onPointerMove={[Function]}
      onPointerUp={[Function]}
      onTouchStart={[Function]}
      role="columnheader"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "200px",
          "flexGrow": 1,
          "flexShrink": undefined,
          "minWidth": "200px",
          "textAlign": undefined,
        }
      }
    >
      <div
        className="tooltipWrapper"
      >
        <div
          className="iconCell uui-table-header-caption"
        >
          <div
            className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 caption upperCase container"
          >
            name
          </div>
          <button
            className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon icon sortIcon sortIconActive"
            href={null}
            onClick={[Function]}
            role="button"
            tabIndex={-1}
            type="button"
          >
            <div
              className="container uui-icon uui-enabled"
              style={Object {}}
            >
              <svg
                className=""
              />
            </div>
          </button>
        </div>
      </div>
      <div
        className="resizeMark -draggable"
        onMouseDown={[Function]}
      />
    </div>
    <div
      aria-sort="none"
      className="-clickable cell size-24 resizable draggable"
      onClick={[Function]}
      onPointerDown={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
      onPointerMove={[Function]}
      onPointerUp={[Function]}
      onTouchStart={[Function]}
      role="columnheader"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "150px",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "minWidth": "150px",
          "textAlign": undefined,
        }
      }
    >
      <div
        className="tooltipWrapper"
      >
        <div
          className="iconCell uui-table-header-caption"
        >
          <div
            className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 caption upperCase container"
          >
            Level
          </div>
          <button
            className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon icon sortIcon"
            href={null}
            onClick={[Function]}
            role="button"
            tabIndex={-1}
            type="button"
          >
            <div
              className="container uui-icon uui-enabled"
              style={Object {}}
            >
              <svg
                className=""
              />
            </div>
          </button>
        </div>
      </div>
      <div
        className="resizeMark -draggable"
        onMouseDown={[Function]}
      />
    </div>
    <div
      aria-sort="none"
      className="-clickable cell size-24 padding-right-24 resizable draggable"
      onClick={[Function]}
      onPointerDown={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
      onPointerMove={[Function]}
      onPointerUp={[Function]}
      onTouchStart={[Function]}
      role="columnheader"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "120px",
          "flexGrow": 1,
          "flexShrink": 0,
          "minWidth": "120px",
          "textAlign": undefined,
        }
      }
    >
      <div
        className="tooltipWrapper"
      >
        <div
          className="iconCell uui-table-header-caption"
        >
          <div
            className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 caption upperCase container"
          >
            DATE
          </div>
          <button
            className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon icon sortIcon"
            href={null}
            onClick={[Function]}
            role="button"
            tabIndex={-1}
            type="button"
          >
            <div
              className="container uui-icon uui-enabled"
              style={Object {}}
            >
              <svg
                className=""
              />
            </div>
          </button>
        </div>
      </div>
      <div
        className="resizeMark -draggable"
        onMouseDown={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`DataTableHeaderRow should render with default props 1`] = `
<div
  className="container uui-table-row-container root root uui-table-header-row container align-items-center"
  role="row"
  style={
    Object {
      "minWidth": "566px",
    }
  }
>
  <div
    className="section uui-table-fixed-section fixedColumnsSectionLeft uui-table-fixed-section-left"
    style={
      Object {
        "flex": "0 0 96px",
        "minWidth": "96px",
      }
    }
  >
    <div
      aria-sort="none"
      className="-clickable cell size-36 padding-left-24"
      onClick={[Function]}
      role="columnheader"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "96px",
          "flexGrow": 0,
          "flexShrink": undefined,
          "minWidth": "96px",
          "textAlign": undefined,
        }
      }
    >
      <div
        className="tooltipWrapper"
      >
        <div
          className="iconCell uui-table-header-caption"
        >
          <div
            className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 caption font-size-14 container"
          >
            ID
          </div>
          <button
            className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon icon sortIcon"
            href={null}
            onClick={[Function]}
            role="button"
            tabIndex={-1}
            type="button"
          >
            <div
              className="container uui-icon uui-enabled"
              style={Object {}}
            >
              <svg
                className=""
              />
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      className="uui-scroll-shadow-right"
    />
  </div>
  <div
    className="section scrollingSection uui-table-scrolling-section"
    style={
      Object {
        "flex": "2 0 470px",
        "minWidth": "470px",
      }
    }
  >
    <div
      aria-sort="ascending"
      className="-clickable cell size-36"
      onClick={[Function]}
      role="columnheader"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "200px",
          "flexGrow": 1,
          "flexShrink": undefined,
          "minWidth": "200px",
          "textAlign": undefined,
        }
      }
    >
      <div
        className="tooltipWrapper"
      >
        <div
          className="iconCell uui-table-header-caption"
        >
          <div
            className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 caption font-size-14 container"
          >
            name
          </div>
          <button
            className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon icon sortIcon sortIconActive"
            href={null}
            onClick={[Function]}
            role="button"
            tabIndex={-1}
            type="button"
          >
            <div
              className="container uui-icon uui-enabled"
              style={Object {}}
            >
              <svg
                className=""
              />
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      aria-sort="none"
      className="-clickable cell size-36"
      onClick={[Function]}
      role="columnheader"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "150px",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "minWidth": "150px",
          "textAlign": undefined,
        }
      }
    >
      <div
        className="tooltipWrapper"
      >
        <div
          className="iconCell uui-table-header-caption"
        >
          <div
            className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 caption font-size-14 container"
          >
            Level
          </div>
          <button
            className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon icon sortIcon"
            href={null}
            onClick={[Function]}
            role="button"
            tabIndex={-1}
            type="button"
          >
            <div
              className="container uui-icon uui-enabled"
              style={Object {}}
            >
              <svg
                className=""
              />
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      aria-sort="none"
      className="-clickable cell size-36 padding-right-24"
      onClick={[Function]}
      role="columnheader"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "120px",
          "flexGrow": 1,
          "flexShrink": 0,
          "minWidth": "120px",
          "textAlign": undefined,
        }
      }
    >
      <div
        className="tooltipWrapper"
      >
        <div
          className="iconCell uui-table-header-caption"
        >
          <div
            className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 caption font-size-14 container"
          >
            DATE
          </div>
          <button
            className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon icon sortIcon"
            href={null}
            onClick={[Function]}
            role="button"
            tabIndex={-1}
            type="button"
          >
            <div
              className="container uui-icon uui-enabled"
              style={Object {}}
            >
              <svg
                className=""
              />
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
